@startuml
class ClientWarehouse [[java:core.client.ClientWarehouse]] {
	-AuthSession authSession
	-ClientWarehouseUpdater updater
	-ServerInterface server
	..inherited from BaseWarehouse..
	-EntityCollection<Item> itemCollection
}

class "EntityCollection<Item>" as EntityCollection_Item_ [[java:core.main.EntityCollection]] {
	-Map<String,T> entities
	-Collection<EntityCollectionListener<T>> listeners
	-Map<String,EntityListener<T>> entityListeners
}

class Item [[java:core.main.Item]] {
	-String name
	-int amount
	-String barcode
	-String brand
	-Double regularPrice
	-Double salePrice
	-Double purchasePrice
	-String section
	-String row
	-String shelf
	-Double height
	-Double width
	-Double length
	-Double weight
	-LocalDateTime creationDate
	..inherited from Entity..
	-String id
}

class User [[java:core.User]] {
	-String username
	-String password
	..inherited from Entity..
	-String id
}

class AuthSession [[java:core.main.AuthSession]] {
	-User user
	-String token
}

ClientWarehouse "1" --> "1" AuthSession : authSession
ClientWarehouse "1" --> "1" EntityCollection_Item_ : itemCollection
EntityCollection_Item_ "1" --> "*" Item : itemCollection
Item "1" *.. "1" EntityCollection_Item_ : listener
AuthSession "1" --> "1" User : user
@enduml
